<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etNumber1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />

        <EditText
            android:id="@+id/etNumber2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number" />
    </LinearLayout>

    <Button
        android:id="@+id/btnDoMagic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llMain"
        android:text="@string/do_magic" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnDoMagic"
        android:layout_toEndOf="@id/btnDoMagic"
        android:text="@string/hello"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/llImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/imgMain"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher" />

    </LinearLayout>

    <Button
        android:id="@+id/btnSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llImage"
        android:onClick="onToSecond"
        android:text="@string/go_to_second" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSecond"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passing_second_activity" />

        <EditText
            android:id="@+id/etPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <EditText
            android:id="@+id/etPersonGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="gender" />

        <Button
            android:id="@+id/btnThird"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="passPersonToSecond"
            android:text="@string/pass_person_to_second" />
    </LinearLayout>

</RelativeLayout>